...
                  provider.enableDarkTheme(!provider.isDarkTheme);
                },
              );
            },
          ),
          PopupMenuButton<String>(
            key: const ValueKey('myPopupMenuButton'),
            onSelected: (value) {
              switch (value) {
                case 'search':
                  Navigator.pushNamed(context, SearchScreen.routeName);
                  break;
                case 'favorite':
...
              const PopupMenuItem<String>(
                value: 'favorite',
                child: Row(
                  children: [
                    Icon(Icons.favorite),
                    SizedBox(width: 8),
                    Text('Favorite'),
                  ],
                ),
              ),
              const PopupMenuItem<String>(
                value: 'settings',
                child: Row(
...
